--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -2,15 +2,15 @@
 distribution = "2201.10.0"
 org = "ballerinax"
 name = "hubspot.crm.commerce.taxes"
-version = "1"
+version = "1.0.0"
 license = ["Apache-2.0"]
 authors = ["Ballerina"]
-keywords = []
-# icon = "icon.png" # TODO: update icon.png
+keywords = ["hubspot", "crm", "commerce", "taxes"]
+icon = "icon.png"
 repository = "https://github.com/ballerina-platform/module-ballerinax-hubspot.crm.commerce.taxes"
 
 [build-options]
 observabilityIncluded = true
 
-[platform.java21]
+[platform.java17]
 graalvmCompatible = true
